# summa

./: .clang-format  .gitignore  .markdownlint.yaml  .markdownlintignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml
cmake/: SummaTestAddTests.cmake  SummaTestDiscover.cmake
docs/test/: DOCS.md
examples/: CMakeLists.txt
examples/hello/: main.c  main.cpp
git/hooks/: pre-commit
include/summa/: identity.h  test.h
include/summa/array/: array.h
include/summa/hash_map/: hash_map.h
include/summa/hash_set/: DESIGN.md  hash_set.h
include/summa/hashmap/: hashmap.h
include/summa/macros/: macros.h
include/summa/ref_count/: ref_count.h
include/summa/scheme/: scheme.h
include/summa/string/: string.h
include/summa/test/: DOCS.md  test.h
include/template_cpp/: identity.hpp
src/template_cpp/: identity.cpp
tests/: CMakeLists.txt  array.test.c  hash_map.test.c  hash_set.test.c  hashmap.test.c  identity.test.c  identity.test.cpp  ref_count.test.c  ref_count.threaded.test.c  scheme.array.test.c  scheme.string.test.c  scheme.test.c  string.test.c  test.test.c
tests/scheme/: scheme.environment.test.c  scheme.equals.c  scheme.evaluate.c  scheme.evaluate.test.c  scheme.print.c  scheme.print.test.c  scheme.read.c  scheme.read.test.c
